--- a/app/src/main/res/layout/activity_topic_main.xml
+++ b/app/src/main/res/layout/activity_topic_main.xml
@@ -21,7 +21,6 @@
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="1000px"
-            android:alpha="0.8"
             android:background="@drawable/black_border"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +28,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/java_main_title"
+            android:id="@+id/topic_main_title"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,9 +47,11 @@
             app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
 
         <ScrollView
+            android:id="@+id/topic_main_scrollview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
             android:scrollbars="none"
@@ -60,8 +61,8 @@
             app:layout_constraintTop_toBottomOf="@+id/view">
 
             <LinearLayout
-                android:id="@+id/java_main_layout"
-                android:layout_width="wrap_content"
+                android:id="@+id/topic_main_layout"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="top"
                 android:orientation="vertical" />
@@ -73,7 +74,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
             android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@+id/java_main_title"
+            app:layout_constraintTop_toBottomOf="@+id/topic_main_title"
             tools:layout_editor_absoluteX="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
