Added first topics

--- a/app/src/main/res/layout/activity_learn_main.xml
+++ b/app/src/main/res/layout/activity_learn_main.xml
@@ -41,7 +41,7 @@
             android:shadowRadius="1.5"
             android:text="@string/choose_language"
             android:textColor="@color/darkblue"
-            android:textSize="20sp"
+            android:textSize="50px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
