--- a/app/src/main/res/layout/activity_java_introduction.xml
+++ b/app/src/main/res/layout/activity_java_introduction.xml
@@ -19,53 +19,103 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ScrollView
+            android:id="@+id/scrollView4"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/java_intro_seperator3"
+            app:layout_constraintEnd_toEndOf="@+id/java_intro_seperator"
+            app:layout_constraintStart_toStartOf="@+id/java_intro_seperator"
+            app:layout_constraintTop_toBottomOf="@+id/java_intro_seperator">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/java_intro_title"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:id="@+id/java_intro_t1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:fontFamily="@font/carter_one"
-                    android:gravity="center"
-                    android:shadowColor="#000"
-                    android:shadowDx="2"
-                    android:shadowDy="5"
-                    android:shadowRadius="1.5"
-                    android:text="@string/java_introduction_name"
-                    android:textColor="@color/darkblue"
-                    android:textSize="60px" />
+                    android:text="@string/java_introduction_t1"
+                    android:textColor="@color/black" />
 
-                <View
-                    android:id="@+id/java_intro_seperator"
-                    android:layout_width="match_parent"
-                    android:layout_height="3px"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginRight="24dp"
-                    android:background="@android:color/darker_gray" />
-
-                <WebView
-                    android:id="@+id/java_intro_cw"
+                <TextView
+                    android:id="@+id/java_intro_t2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginRight="12dp" />
+                    android:text="@string/java_introduction_t2"
+                    android:textColor="@color/black" />
+
             </LinearLayout>
         </ScrollView>
+
+        <TextView
+            android:id="@+id/java_intro_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/carter_one"
+            android:gravity="center"
+            android:shadowColor="#000"
+            android:shadowDx="2"
+            android:shadowDy="5"
+            android:shadowRadius="1.5"
+            android:text="@string/java_introduction_name"
+            android:textColor="@color/darkblue"
+            android:textSize="60px"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/java_intro_seperator"
+            android:layout_width="0dp"
+            android:layout_height="3px"
+            android:layout_gravity="center"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/java_intro_title" />
+
+        <WebView
+            android:id="@+id/java_intro_cw"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/java_intro_seperator2"
+            app:layout_constraintEnd_toEndOf="@+id/scrollView4"
+            app:layout_constraintStart_toStartOf="@+id/scrollView4">
+
+        </WebView>
+
+        <View
+            android:id="@+id/java_intro_seperator2"
+            android:layout_width="0dp"
+            android:layout_height="3px"
+            android:layout_gravity="center"
+            android:layout_marginBottom="24dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/java_intro_seperator"
+            app:layout_constraintStart_toStartOf="@+id/java_intro_seperator" />
+
+        <View
+            android:id="@+id/java_intro_seperator3"
+            android:layout_width="0dp"
+            android:layout_height="3px"
+            android:layout_gravity="center"
+            android:layout_marginBottom="24dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toTopOf="@+id/java_intro_cw"
+            app:layout_constraintEnd_toEndOf="@+id/scrollView4"
+            app:layout_constraintStart_toStartOf="@+id/scrollView4" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
