Shuffle answers + answer check dialog

--- a/app/src/main/res/layout/quiz_multiple_options.xml
+++ b/app/src/main/res/layout/quiz_multiple_options.xml
@@ -26,18 +26,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/quiz_mo_progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="60px"
-            android:layout_marginTop="16dp"
-            android:max="100"
-            android:progressDrawable="@drawable/custom_progress_bg"
-            app:layout_constraintEnd_toEndOf="@+id/quiz_mo_option_4"
-            app:layout_constraintStart_toStartOf="@+id/quiz_mo_option_4"
-            app:layout_constraintTop_toBottomOf="@+id/quiz_mo_option_4" />
-
         <RadioButton
             android:id="@+id/quiz_mo_option_1"
             android:layout_width="0dp"
@@ -131,6 +119,17 @@
             app:layout_constraintStart_toStartOf="@+id/quiz_mo_option_3"
             app:layout_constraintTop_toBottomOf="@+id/quiz_mo_option_3" />
 
+        <LinearLayout
+            android:id="@+id/quiz_mo_dots"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/quiz_mo_constraintLayout"
+            app:layout_constraintEnd_toEndOf="@+id/quiz_mo_option_4"
+            app:layout_constraintStart_toStartOf="@+id/quiz_mo_option_4" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/quiz_mo_constraintLayout"
             android:layout_width="950px"
@@ -157,6 +156,7 @@
                     style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:fontFamily="@font/carter_one"
                     android:gravity="center"
                     android:shadowColor="#000"
